# api-redshift-stado

./: .dockerignore  .env.example  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  bumpversion.sh  config.py  pyproject.toml
api/: __main__.py
api/database/: execute_query.py
api/database/schemas/: TradeDesk.py
api/logging/: log_maker.py
api/v1/endpoints/: data.py
api/v1/routers/routers/: py.py
